Bug 71064 - "Failed to open display" error in the help message when using LO via SSH
Summary: "Failed to open display" error in the help message when using LO via SSH
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.1.3.2 release
Hardware: Other Linux (All)
: lowest trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-10-30 20:40 UTC by Andrew Leung
Modified: 2016-10-25 18:39 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Leung 2013-10-30 20:40:49 UTC
When executing LibreOffice via SSH with the -h option, the first line shows an error message: Failed to open display. This error message was not previously present in LibreOffice 4.0.3, because it did not require a display at all.

The -h option displays a help message and exits, so shouldn't --headless be implied?
Comment 1 tommy27 2014-01-19 09:18:58 UTC
please specify your exact O/S version and tell us if issue is still there with LibO 4.1.4.2
Comment 2 Andrew Leung 2014-01-20 23:37:52 UTC
I'm running RHEL Server release 6.3 (Linux version 2.6.32-279.11.1.el6.x86_64).

Yes, the issue is still present after upgrading to 4.1.4.2. Here's the output:

[root@server ~]# libreoffice -h
Failed to open display
LibreOffice 4.1.4.2 0a0440ccc0227ad9829de5f46be37cfb6edcf72

Usage: soffice [options] [documents...]

[... and so on ...]
Comment 3 Andrew Leung 2014-04-16 18:44:26 UTC
The issue is still present after upgrading to 4.2.3.3.

Can anyone else see this?
Comment 4 tommy27 2014-04-16 19:31:06 UTC
revert status to UNCONFIRMED
NEW status can be achieved only after independent confirmation of bug by another user different from the original reporter
Comment 5 Andrew Leung 2014-04-16 20:48:07 UTC
Tommy27, sorry I didn't know that (the NEW status is not documented).

I also testing this on a fresh Ubuntu Server 13.10. Got the exact same problem.

Can you perhaps give me a hand with confirming this bug please?
Comment 6 Robinson Tryon (qubit) 2015-01-07 02:43:29 UTC
TESTING with Ubuntu 14.04 + a 4.4-branch build
(commit: dea4a3b9d7182700abeb4dc756a24a9e8dea8474
 Wed May 21 19:16:44 2014 +0200)

(In reply to Andrew Leung from comment #2)
> Yes, the issue is still present after upgrading to 4.1.4.2. Here's the
> output:
> 
> [root@server ~]# libreoffice -h
> Failed to open display
> LibreOffice 4.1.4.2 0a0440ccc0227ad9829de5f46be37cfb6edcf72
> 
> Usage: soffice [options] [documents...]
> 
> [... and so on ...]

CONFIRMED. Using 'soffice -h' or 'soffice -?' gives an extra 'Failed to open display' line, whereas 'soffice --help' does not give that line. According to the help information output by all three invocations, the three switches should be the same.
Comment 7 QA Administrators 2016-01-17 20:02:57 UTC Comment hidden (obsolete)
Comment 8 Andrew Leung 2016-01-20 23:37:12 UTC
Tested LibreOffice 5.0.4.2 on RHEL Server release 6.3. No change from before. It still shows the same failure message when passing the -h or -? option, but it doesn't when passing --help. (Outputs below.)

I also tested LibreOffice 3.3 and 4.0.3. The issue is not present in those versions. I believe it started happening somewhere around 4.1.

----------

[root@server ~]# libreoffice -h
Failed to open display
LibreOffice 5.0.4.2 2b9802c1994aa0b7dc6079e128979269cf95bc78

Usage: soffice [options] [documents...]

(omitted...)

----------

[root@server ~]# libreoffice --help
LibreOffice 5.0.4.2 2b9802c1994aa0b7dc6079e128979269cf95bc78

Usage: soffice [options] [documents...]

(omitted...)
Comment 9 Commit Notification 2016-07-09 14:41:07 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=75ae1437397af2d4c7d16d0d11952c87105c582e

Resolves: tdf#71064 failed to open display with -h but not --help

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.