Resolves: tdf#71064 failed to open display with -h but not --help

when there is no DISPLAY set

Change-Id: Ic4f10d6f4781d01a05e51862b41311a2c1a3dc66